; ModuleID = '/home/carl/AnghaBench/vlc/src/misc/extr_keystore.c_vlc_keystore_create.c'
source_filename = "/home/carl/AnghaBench/vlc/src/misc/extr_keystore.c_vlc_keystore_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"keystore\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @vlc_keystore_create(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @assert(i32* %5)
  %7 = load i32*, i32** %2, align 8
  %8 = call i8* @var_InheritString(i32* %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i8* %8, i8** %3, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i32* @keystore_create(i32* %9, i8* %10)
  store i32* %11, i32** %4, align 8
  %12 = load i8*, i8** %3, align 8
  %13 = call i32 @free(i8* %12)
  %14 = load i32*, i32** %4, align 8
  ret i32* %14
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i8* @var_InheritString(i32*, i8*) #1

declare dso_local i32* @keystore_create(i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
